# dctl

./: .gitignore  PLAN.md  README.md  pyproject.toml
dctl/: __main__.py  capabilities.py  cli.py  doctor.py  errors.py  locator.py  models.py  output.py  selector.py
dctl/adapters/: browser_cdp.py  docx_files.py  libreoffice_uno.py  xlsx_files.py
dctl/platform/: __init__.py  base.py  detect.py  manager.py
dctl/platform/linux/: __init__.py  accessibility_atspi.py  input.py  launch.py  windowing.py
dctl/platform/macos/: __init__.py  backend.py
docs/: ARCHITECTURE.md  BROWSER.md  COMMANDS.md  CONFIGURATION.md  DEVELOPMENT.md  GETTING-STARTED.md  OFFICE.md  ZWORK-INTEGRATION.md
tests/: test_browser_adapter.py  test_doctor.py  test_docx_adapter.py  test_input.py  test_launch.py  test_selector.py  test_xlsx_adapter.py
